# algoServer

./: BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  FileCacheManager.cpp  FileCacheManager.h  Greater.h  ISearchable.h  ISearcher.h  MatrixSolver.cpp  MatrixSolver.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Problem.h  SearchableMatrix.h  Searcher.h  Server.cpp  Server.h  Solution.h  Solver.h  SolverToSearcher.h  State.h  Task.cpp  Task.h  ThreadsPool.cpp  ThreadsPool.h  main.cpp
